fix font size and alignment

--- a/web/app/themes/gratitude2023/resources/styles/blocks/_top-section.scss
+++ b/web/app/themes/gratitude2023/resources/styles/blocks/_top-section.scss
@@ -14,6 +14,7 @@
 
     .text{
         display: flex;
+        flex-flow: column;
         justify-content: center;
         align-items: center;
         text-align: center;
