--- a/web/app/themes/gratitude2023/resources/styles/common/_global.scss
+++ b/web/app/themes/gratitude2023/resources/styles/common/_global.scss
@@ -86,7 +86,7 @@ h2{
     color: $orange;
     font-weight: 600;
     font-size: 2.25rem;
-    line-height: 2.375rem;
+    line-height: 1.1em;
     margin-bottom: 1rem;
     letter-spacing: -.03rem;
     
@@ -122,8 +122,7 @@ p{
 
 @include media-breakpoint-up(md){
     h2{
-        font-size: 4.25rem;
-        line-height: 4.375rem;
+        font-size: 3rem;
         margin-bottom: 1.8rem;
     }
     
